--- a/animalAdoption/package.json
+++ b/animalAdoption/package.json
@@ -31,7 +31,9 @@
   "dependencies": {
     "@reach/router": "^1.2.1",
     "petfinder-client": "0.0.3",
+    "ract": "0.0.1",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "react-loadable": "^5.5.0"
   }
 }
