--- a/animalAdoption/package.json
+++ b/animalAdoption/package.json
@@ -30,8 +30,12 @@
   },
   "dependencies": {
     "@reach/router": "^1.2.1",
+    "http2": "^3.3.7",
     "petfinder-client": "0.0.3",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   }
 }
